# pod-synq

./: .releaserc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/: 001_initial.sql  002_add_settings.sql  003_sessions.sql  004_device_sync.sql  005_favorites.sql  006_podcasts_metadata.sql
src/: config.rs  error.rs  main.rs  state.rs
src/handlers/: auth.rs  clientconfig.rs  device_sync.rs  devices.rs  episodes.rs  favorites.rs  mod.rs  settings.rs  subscriptions.rs
src/middleware/: auth.rs  mod.rs
src/models/: admin_session.rs  device.rs  device_sync.rs  episode_action.rs  favorite.rs  mod.rs  podcast.rs  session.rs  setting.rs  subscription.rs  user.rs
src/repository/: admin_session_repository.rs  device_repository.rs  device_sync_repository.rs  episode_action_repository.rs  favorite_repository.rs  mod.rs  podcast_repository.rs  session_repository.rs  setting_repository.rs  subscription_repository.rs  user_repository.rs
src/routes/: mod.rs
src/services/: admin_session_service.rs  device_service.rs  device_sync_service.rs  episode_action_service.rs  favorite_service.rs  mod.rs  podcast_service.rs  session_service.rs  setting_service.rs  subscription_service.rs  user_service.rs
src/utils/: mod.rs  url_sanitizer.rs
tests/: README.md  e2e.sh
