[package]
name = "pod-synq"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.4", features = ["compression", "multipart", "websocket", "server"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
rust-embed = "8"
askama = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
base64 = "0.22"
handlebars = "6"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
